change python version to 3.12 since I want to use the latest stable version of python

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["sheltonsuen <sheltonsuen@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "~3.12"
 
 
 [[tool.poetry.source]]
